feat(query): add patientId to query section on medical record and pass to details

--- a/src/app/components/patient-medical-record/queries-section/queries-section.component.html
+++ b/src/app/components/patient-medical-record/queries-section/queries-section.component.html
@@ -6,7 +6,7 @@
 >
   <app-accordion *ngFor="let query of queries">
     <div customHeader class="flex gap-2">
-      <button [routerLink]="['/consultas', query.id]">
+      <button [routerLink]="['/consultas', query.id]" [state]="{patientId}">
         <ng-icon name="ionCreateOutline" class="text-lg" />
       </button>
       <p customHeader class="font-semibold">
