feat(query): pass patientId to query section from patient med record

--- a/src/app/pages/patient-medical-record/patient-medical-record.component.html
+++ b/src/app/pages/patient-medical-record/patient-medical-record.component.html
@@ -24,7 +24,10 @@
       </div>
     </section>
     <section #medicalRecordSections class="flex flex-col gap-3 p-3">
-      <app-queries-section [queries]="medicalRecord?.queries ?? []" />
+      <app-queries-section
+        [queries]="medicalRecord?.queries ?? []"
+        [patientId]="patientId"
+      />
       <app-exams-section [exams]="medicalRecord?.exams ?? []" />
       <app-exercises-section [exercises]="medicalRecord?.exercises ?? []" />
       <app-diets-section [diets]="medicalRecord?.diets ?? []" />
