--- a/src/app/pages/exam/exam.component.html
+++ b/src/app/pages/exam/exam.component.html
@@ -1,7 +1,7 @@
 <div class="flex h-[calc(100%-80px)] bg-slate-50 text-slate-800">
   <div class="flex-grow p-4 overflow-y-auto">
     <div class="container py-3 pr-2 m-auto text-slate-800 pl-14">
-      <form [formGroup]="formsExamRegister" (ngSubmit)="registerExam()">
+      <form [formGroup]="formsExamRegister" (ngSubmit)="saveExam()">
         <h3 class="my-1 text-xl font-bold">Cadastro de exames</h3>
 
         <div class="gap-2 md:flex">
