feat(exam): delete exam

--- a/src/app/pages/exam/exam.component.html
+++ b/src/app/pages/exam/exam.component.html
@@ -190,6 +190,7 @@
         </div>
         <app-form-buttons
           (handleEdit)="isCreating ? (formsExamRegister = initExamForm()) : {}"
+          (handleDelete)="deleteExam()"
           [isCreating]="isCreating"
         />
       </form>
