--- a/src/app/pages/patient-medical-record/patient-medical-record.component.html
+++ b/src/app/pages/patient-medical-record/patient-medical-record.component.html
@@ -26,7 +26,10 @@
     <section #medicalRecordSections class="flex flex-col gap-3 p-3">
       <app-queries-section [queries]="medicalRecord?.queries ?? []" />
       <app-exams-section [exams]="medicalRecord?.exams ?? []" />
-      <app-exercises-section [exercises]="medicalRecord?.exercises ?? []" />
+      <app-exercises-section
+        [exercises]="medicalRecord?.exercises ?? []"
+        [patientId]="patientId"
+      />
       <app-diets-section [diets]="medicalRecord?.diets ?? []" />
 
       <!-- <app-accordion
