feat(exercise): delete functionality

--- a/src/app/pages/exercise/exercise.component.html
+++ b/src/app/pages/exercise/exercise.component.html
@@ -176,6 +176,7 @@
           (handleEdit)="
             isCreating ? (formsExerciseRegister = initExerciseForm()) : {}
           "
+          (handleDelete)="deleteExercise()"
           [isCreating]="isCreating"
         />
       </form>
