--- a/src/app/shared/components/sidebar/sidebar.component.html
+++ b/src/app/shared/components/sidebar/sidebar.component.html
@@ -2,7 +2,17 @@
   class="relative flex flex-col justify-between h-full py-8 transition-all duration-700"
   [ngClass]="collapsed ? 'w-20' : 'w-56'"
 >
-  <section class="mx-auto">Logo</section>
+  <section
+    class="p-2 mx-auto rounded-md"
+    [ngClass]="{ 'bg-slate-50': !collapsed }"
+  >
+    <img
+      class="w-[97px] h-[50px]"
+      [ngClass]="{ hidden: collapsed }"
+      src="/../../../assets/Logo.svg"
+      alt="Logo"
+    />
+  </section>
   <section class="overflow-hidden">
     <ul>
       <li *ngFor="let option of options; index as idx">
