--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,19 +1,19 @@
 <nav
-  class="relative z-20 flex items-center justify-between p-4 text-slate-800 shadow-lg bg-slate-50 h-20"
+  class="relative z-20 flex items-center justify-between h-20 p-4 shadow-lg text-slate-800 bg-slate-50"
 >
-  <div class="flex flex-grow items-center justify-center">
-    <h1 class="text-3xl font-bold">Dashboard</h1>
+  <div class="flex items-center justify-center flex-grow">
+    <h1 class="text-3xl font-bold">{{ title }}</h1>
   </div>
   <div
-    class="w-2/12 flex gap-2 justify-between items-center px-4 border-slate-300 border-l"
+    class="flex items-center justify-between w-2/12 gap-2 px-4 border-l border-slate-300"
     aria-haspopup="true"
   >
     <ng-icon name="ionPersonCircle" class="text-5xl text-slate-400" />
-    <div class="w-3/5 flex flex-col leading-3">
+    <div class="flex flex-col w-3/5 leading-3">
       <p class="font-semibold truncate">
         {{ user.fullName }}
       </p>
-      <p class="text-xs text-slate-400 truncate">
+      <p class="text-xs truncate text-slate-400">
         {{ user.email }}
       </p>
     </div>
