feat(patient): populate form

--- a/src/app/pages/patient/patient.component.html
+++ b/src/app/pages/patient/patient.component.html
@@ -4,7 +4,7 @@
       <form [formGroup]="formPatientRegister" (ngSubmit)="registerPatient()">
         <h3 class="my-2 text-xl font-bold">Cadastro de paciente</h3>
 
-        <h3 class="mb-3 my-3 font-semibold">Informações pessoais</h3>
+        <h3 class="my-3 mb-3 font-semibold">Informações pessoais</h3>
 
         <div class="gap-2 md:flex">
           <div class="w-6/12 input-wrapper">
@@ -39,7 +39,7 @@
               formControlName="genre"
             >
               <option disabled selected></option>
-              <option value="CISGENDER">Cisgenero</option>
+              <option value="CISGENDER">Cisgênero</option>
               <option value="TRASNGENDER">Transgênero</option>
               <option value="NONBINARY">Não-binário</option>
             </select>
@@ -222,7 +222,7 @@
           </div>
         </div>
 
-        <h3 class="mb-3 my-3 font-semibold">Informações de saúde</h3>
+        <h3 class="my-3 mb-3 font-semibold">Informações de saúde</h3>
 
         <div class="gap-2 md:flex">
           <div class="w-4/12 input-wrapper">
@@ -302,7 +302,7 @@
           </div>
         </div>
 
-        <h3 class="mb-3 my-3 font-semibold">Informações de endereço</h3>
+        <h3 class="my-3 mb-3 font-semibold">Informações de endereço</h3>
 
         <div class="gap-2 md:flex">
           <div class="w-6/12 input-wrapper">
@@ -433,7 +433,9 @@
             />
           </div>
         </div>
-        <app-form-buttons (handleEdit)="formPatientRegister = initPatientForm()" />
+        <app-form-buttons
+          (handleEdit)="formPatientRegister = initPatientForm()"
+        />
       </form>
     </div>
   </div>
