--- a/src/app/pages/patient/patient.component.html
+++ b/src/app/pages/patient/patient.component.html
@@ -1,7 +1,7 @@
 <div class="flex h-[calc(100%-80px)] bg-slate-50 text-slate-800">
   <div class="flex-grow p-4 overflow-y-auto">
     <div class="container py-4 pr-2 m-auto text-slate-800 pl-14">
-      <form [formGroup]="formPatientRegister" (ngSubmit)="registerPatient()">
+      <form [formGroup]="formPatientRegister" (ngSubmit)="savePatient()">
         <h3 class="my-2 text-xl font-bold">Cadastro de paciente</h3>
 
         <h3 class="my-3 mb-3 font-semibold">Informações pessoais</h3>
@@ -40,7 +40,7 @@
             >
               <option disabled selected></option>
               <option value="CISGENDER">Cisgênero</option>
-              <option value="TRASNGENDER">Transgênero</option>
+              <option value="TRANSGENDER">Transgênero</option>
               <option value="NONBINARY">Não-binário</option>
             </select>
             <div
@@ -435,6 +435,7 @@
         </div>
         <app-form-buttons
           (handleEdit)="formPatientRegister = initPatientForm()"
+          [isCreating]="isCreating"
         />
       </form>
     </div>
