feat(patient): delete functionality

--- a/src/app/pages/patient/patient.component.html
+++ b/src/app/pages/patient/patient.component.html
@@ -435,6 +435,7 @@
         </div>
         <app-form-buttons
           (handleEdit)="formPatientRegister = initPatientForm()"
+          (handleDelete)="deletePatient()"
           [isCreating]="isCreating"
         />
       </form>
