fix(diet): fix populate ketogenic type

--- a/src/app/pages/diet/diet.component.html
+++ b/src/app/pages/diet/diet.component.html
@@ -40,7 +40,7 @@
               <option value="LOW_CARB">Low Carb</option>
               <option value="DASH">Dash</option>
               <option value="PALEOLITHIC">Paleolítica</option>
-              <option value="KETOGENIC">Cetogenica</option>
+              <option value="KETOGENIC">Cetogênica</option>
               <option value="DUKAN">Dukan</option>
               <option value="MEDITERRANEAN">Mediterrânea</option>
               <option value="OTHER">Outra</option>
