feat(user): delete functionality

--- a/src/app/pages/user/user.component.html
+++ b/src/app/pages/user/user.component.html
@@ -178,6 +178,7 @@
         </div>
         <app-form-buttons
           (handleEdit)="isCreating ? (formUserRegister = initUserForm()) : {}"
+          (handleDelete)="deleteUser()"
           [isCreating]="isCreating"
         />
       </form>
