--- a/src/app/pages/medicaments/medicaments.component.html
+++ b/src/app/pages/medicaments/medicaments.component.html
@@ -170,7 +170,10 @@
         </div>
 
         <app-form-buttons
-          (handleEdit)="formMedicaments = initMedicamentsForm()"
+          (handleEdit)="
+            isCreating ? (formMedicaments = initMedicamentsForm()) : {}
+          "
+          [isCreating]="isCreating"
         />
       </form>
     </div>
