fix(user): disable delete btn if user is editing himself

--- a/src/app/pages/user/user.component.html
+++ b/src/app/pages/user/user.component.html
@@ -180,6 +180,7 @@
           (handleEdit)="isCreating ? (formUserRegister = initUserForm()) : {}"
           (handleDelete)="deleteUser()"
           [isCreating]="isCreating"
+          [disableDelete]="isSelf"
         />
       </form>
     </div>
