--- a/src/app/shared/components/form-buttons/form-buttons.component.html
+++ b/src/app/shared/components/form-buttons/form-buttons.component.html
@@ -7,6 +7,7 @@
     [label]="'Deletar'"
     (clickHandler)="onDelete()"
     *ngIf="!isCreating"
+    [disabled]="disableDelete"
   />
   <app-custom-button
     [label]="'Salvar'"
