feat(medicament): delete functionality

--- a/src/app/pages/medicaments/medicaments.component.html
+++ b/src/app/pages/medicaments/medicaments.component.html
@@ -173,6 +173,7 @@
           (handleEdit)="
             isCreating ? (formMedicaments = initMedicamentsForm()) : {}
           "
+          (handleDelete)="deleteMedicament()"
           [isCreating]="isCreating"
         />
       </form>
