--- a/src/app/pages/medical-records/medical-records.component.html
+++ b/src/app/pages/medical-records/medical-records.component.html
@@ -1,6 +1,8 @@
 <div class="flex h-[calc(100%-80px)] text-slate-800">
   <div class="flex-grow p-4 overflow-y-auto">
-    <app-delay-search-input (inputEmitter)="({})" />
+    <div class="flex">
+      <app-delay-search-input (inputChange)="onSearchInput($event)" />
+    </div>
     <div class="flex flex-wrap gap-3 pt-3">
       <app-medical-records-card
         *ngFor="let medicalRecord of medicalRecords"
